V 0.8g:
Bug Fixes:
- Lucky Number Slevin no longer crashes the game
- Spells are protected against indexing error
- Oceans 11 works again

V 0.8f:
Bug Fixes:
- Stripes no longer decreases its mult incorrectly when discarding multiple cards
- Wall Street no longer crashes the game
- Talisman no longer crashes due to Sugarland Express
- Cruella De Vil boss blind has been temporarily disabled
- The Prestige now only spawns if you have a lucky card
- The Producer deck now no longer triggers after every blind, but only boss blinds
- The Producer deck no longer loses money if you do not own any movie jokers
- Gum has the correct card art
- Hotdog no longer crashes the game when it has the Chocolate effect

V 0.8e:
Bug Fixes:
- Barbie now has correct metadata
- Barbie now only triggers on scoring queens
- Insomnia now doesn't stop cards from being drawn outside of blinds
- Hustle is now compatible with talisman
- Producer tarot now has a safeguard against cards with incorrect budgets
- Producer now refunds investment if used on a broken movie joker
- Producer Deck should no longer give infinite money if a broken movie joker is owned
- Ghostbusters now only spawns if you have debuffed cards in deck
- ratatouille confection removed from the collection

V 0.8d:
Bug Fixes:
- Jokers that interact with spells won't spawn anymore if you have no means of casting a spell
- the Ma-Ma blind no longer crashes the game if you haven't used a consumable
- The Joker blind now displays text properly
- Commando only spawns in you have wild cards
- Steel only spawns in you have steel cards


V 0.8c:
Bug Fixes:
- Cronos no longer sets ranks to half-ranks on the back end

- Xenomorph blind no longer crashes the game

- Demonic enhancements no longer fail to destroy cards

- Fixed the following challenges:
- The movie only rule no longer causes only jimbo to spawn
- Cade Yeager Cosplay now properly pays out
- Xenomorph Invasion now properly debuffs