@@ -6,7 +6,7 @@
     "prefix": "kino",
     "main_file": "Kino.lua",
     "badge_colour": "1b61ad",
-    "version": "0.8f",
+    "version": "0.8g",
     "dependencies": ["Steamodded (>=1.0.0~BETA-0323b)", "Lovely (>=0.7)"]
     
 }
